# mcp-rust-docs

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DESIGN.md  Justfile  LICENSE  README.md  SPECIFICATION.md  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish-npm.yaml  unit-test.yaml
docs/: AGENTS_md-da39a3ee-analysis.md  CLAUDE_md-da39a3ee-analysis.md  Cargo_toml-da39a3ee-analysis.md  README_md-da39a3ee-analysis.md  about_toml-da39a3ee-analysis.md  package_json-da39a3ee-analysis.md
docs/.github/: dependabot_yml-4c40eab0-analysis.md
docs/.github/workflows/: unit-test_yaml-93d7c4b8-analysis.md
docs/src/: cache_rs-f27fede2-analysis.md  error_rs-f27fede2-analysis.md  handler_rs-f27fede2-analysis.md  instruction_md-f27fede2-analysis.md  main_rs-f27fede2-analysis.md  resource_rs-f27fede2-analysis.md  tool_rs-f27fede2-analysis.md
docs/src/entity/: crates_io_rs-2ff782a1-analysis.md  docs_rs-2ff782a1-analysis.md  mod_rs-2ff782a1-analysis.md
docs/src/record/: crates_io_rs-77194ede-analysis.md  mod_rs-77194ede-analysis.md
docs/src/repository/: crates_io_rs-133f6952-analysis.md  http_rs-133f6952-analysis.md  mod_rs-133f6952-analysis.md
docs/src/use_case/: crates_io_rs-2073595f-analysis.md  docs_rs-2073595f-analysis.md  mod_rs-2073595f-analysis.md
src/: cache.rs  error.rs  handler.rs  instruction.md  main.rs  resource.rs  tool.rs
src/repository/: crates_io.rs  http.rs  mod.rs  rmcp.html
src/use_case/: docs.rs  mod.rs
