[package]
name = "mcp-rust-docs"
version = "0.1.0-alpha.1"
edition = "2024"
description = "A Model Context Protocol (MCP) server that provides comprehensive access to Rust crate documentation and metadata. "
keywords = ["mcp", "mcp-server"]
authors = ["Ikuma Yamashita"]
repository = "https://github.com/46ki75/mcp-rust-docs"

[dependencies]
async-trait = "0.1.89"
crates_io_api = { version = "0.12.0", features = ["rustls"] }
regex = "1.11.1"
reqwest = "0.12.23"
rmcp = { version = "0.6.0", features = ["transport-io"] }
schemars = "1.0.4"
scraper = "0.24.0"
serde = "1.0.219"
serde_json = "1.0.143"
tantivy = "0.25.0"
tempfile = "3.21.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "mcp-rust-docs"
path = "src/main.rs"
