[package]
name = "mcp-rust-docs"
version = "0.1.1"
edition = "2024"
description = "A Model Context Protocol (MCP) server that provides comprehensive access to Rust crate documentation and metadata. "
keywords = ["mcp", "mcp-server"]
authors = ["Ikuma Yamashita"]
repository = "https://github.com/46ki75/mcp-rust-docs"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
crates_io_api = { version = "0.12.0", default-features = false, features = [
    "rustls",
] }
fast_html2md = "0.0.50"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
    "http2",
    "rustls-tls",
] }
rmcp = { version = "0.9.0", features = ["transport-io"] }
schemars = "1.1.0"
scraper = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
tantivy = "0.25.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[[bin]]
name = "mcp-rust-docs"
path = "src/main.rs"
